[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Adilson Lima de Paula <adilsonmicuim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"
factory-boy = "^3.2.1"
django = "^4.2"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
